# mprpc

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
lib/include/: mprpcconfig.h  rpcprovider.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.pb.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: main  main.cc  test.pb.cc  test.pb.h  test.proto
